--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "arubooks-wishlist",
   "version": "0.0.0-development",
-  "description": "",
+  "description": "The Wishlist microservice of the AruBooks framework",
   "author": "aruay99",
   "private": true,
   "license": "MIT",
@@ -22,13 +22,27 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "migrate:dev": "npx prisma migrate dev",
+    "migrate:dev:create": "npx prisma migrate dev --create-only",
+    "migrate:deploy": "npx prisma migrate deploy",
+    "prisma:generate": "npx prisma generate",
+    "prisma:studio": "npx prisma studio",
+    "prisma:seed": "npx prisma db seed"
   },
   "dependencies": {
+    "@fastify/static": "^6.11.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.2.5",
+    "@nestjs/swagger": "^7.1.11",
+    "@prisma/client": "5.3.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "fastify-swagger": "^5.2.0",
+    "nestjs-prisma": "^0.22.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -52,6 +66,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "prisma": "^5.3.1",
     "semantic-release": "^22.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
@@ -77,5 +92,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
