--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "debug": "nest start --debug --watch",
     "prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "xo && jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -28,19 +28,21 @@
     "migrate:deploy": "npx prisma migrate deploy",
     "prisma:generate": "npx prisma generate",
     "prisma:studio": "npx prisma studio",
-    "prisma:seed": "npx prisma db seed"
+    "prisma:seed": "npx prisma db seed",
+    "postinstall": "ts-patch install"
   },
   "dependencies": {
     "@fastify/static": "^6.11.2",
+    "@nestia/core": "^2.0.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.2.5",
     "@nestjs/swagger": "^7.1.11",
     "@prisma/client": "5.3.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "fastify": "^4.23.2",
     "fastify-swagger": "^5.2.0",
     "nestjs-prisma": "^0.22.0",
     "reflect-metadata": "^0.1.13",
@@ -65,6 +67,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "nestia": "^4.5.0",
     "prettier": "^3.0.0",
     "prisma": "^5.3.1",
     "semantic-release": "^22.0.0",
@@ -73,8 +76,10 @@
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
+    "ts-patch": "^3.0.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.2",
+    "xo": "^0.56.0"
   },
   "jest": {
     "moduleFileExtensions": [
